Improved the error handling
Displays a dialog whenever any AJAX errors occurs.

--- a/InTheBoks.Web/Views/Shared/_Layout.cshtml
+++ b/InTheBoks.Web/Views/Shared/_Layout.cshtml
@@ -351,6 +351,16 @@ width: 450px;">
                 </div>
         </div>
 
+
+        <div id="infoDialog">
+            <div>
+                <h1 id="infoDialogTitle"></h1>
+                <p id="infoDialogBody"></p>
+                <button id="infoDialogButton1" onclick="HideInformationDialog();">OK</button>
+                <button id="infoDialogButton2" onclick="HideInformationDialog();">Cancel</button>
+            </div>
+        </div>
+
         <div id="propertiesDialog" data-bind="with: SelectedObject" style="display: none; width: 0px; background-color:#dedede; color: gray; position: absolute; top: 0px; right: 0px; bottom: 0px;">
             
             <div style="width: 300px;">
