--- a/InTheBoks.Web/Content/Site.css
+++ b/InTheBoks.Web/Content/Site.css
@@ -511,6 +511,53 @@ a {
         );*/
     }
 
+
+#mask {
+	display: none;
+	background: #000; 
+	position: fixed; left: 0; top: 0; 
+	z-index: 10;
+	width: 100%; height: 100%;
+	opacity: 0.8;
+	z-index: 999;
+}
+
+#infoDialog {
+
+    display:none;
+	background: #CC8B3F;
+    color: white;
+	
+	float: left;
+	font-size: 1.2em;
+	position: fixed;
+	top: 50%;
+    left: 0px;
+    right: 0px;
+	z-index: 99999;
+    min-height: 300px;
+}
+
+    #infoDialog div {
+
+        width: 40%;
+        height: 90%;
+        position: relative;
+        z-index: 999999;
+        margin-top: 30px;
+        margin-top: 30px;
+        margin-left: auto;
+        margin-right: auto;
+        min-width: 320px;
+    }
+
+        #infoDialog div button {
+            position: relative;
+        float: right;
+        z-index: 999999;
+    }
+
+
 #gradient_transparent {
     display: none;
 }
