--- a/InTheBoks.Web/Views/Shared/_Layout.cshtml
+++ b/InTheBoks.Web/Views/Shared/_Layout.cshtml
@@ -105,7 +105,7 @@
             <img src="../../Content/icons/white/delete.png" data-bind="click: DeleteCatalog" class="action" title="Delete Collection" width="32" height="32" />
 
             <img src="~/Content/icons/white/add.png" data-bind="click: AddItem" class="action" style="margin-left: 50px;" title="New Item" />
-            <img src="~/Content/icons/white/delete.png" class="action" title="Delete Item(s)"  />
+            <img src="~/Content/icons/white/delete.png" data-bind="click: DeleteItems" class="action" title="Delete Item(s)"  />
             
             <img src="~/Content/icons/white/friends.png" onclick="ToggleFriends();" title="View/Hide Friends" class="action" style="float: right; margin-right: 8px;" />
 
